# oscillator

./: .env  .envrc  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  main.rs
crates/api/src/handlers/auth/: mod.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260619092143_create_user_table.up.sql  20260720215243_album_tables.down.sql  20260720215243_album_tables.up.sql  20260720220753_artist_tables.up.sql  20260720220759_image_tables.down.sql  20260720220759_image_tables.up.sql
crates/db/src/: connection.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/album/: models.rs  repository.rs
crates/domain/src/artist/: models.rs  repository.rs
crates/domain/src/user/: models.rs  repository.rs
