[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
cuid2 = "0.1.6"

